# rust-intro

./: Cargo.toml  README.md
benches/: benchmarks.rs
benches/csv_gen/: main.rs
resources/: balances0.csv  python_impl.py  summary0.csv  summary100.csv  summary1000.csv  summary10000.csv  txns0.csv  txns100.csv  txns1000.csv  txns10000.csv
src/: lib.rs  main.rs
src/benefits/: mod.rs  performance.rs  productivity.rs  reliability.rs
src/implementations/: mod.rs  owned.rs  refs.rs
src/syntax/: mod.rs
src/uses/: mod.rs
